feat: implement WebSocket response handling with dedicated panel and message filtering